--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ description: A new Flutter project.
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.0+1
+version: 1.0.3+4
 
 environment:
   sdk: '>=2.19.5 <3.0.0'
@@ -49,11 +49,14 @@ dependencies:
 
 
 
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_launcher_icons: ^0.12.0
   flutter_lints: ^2.0.0
+  change_app_package_name: ^1.1.0
+
 
 
 flutter_icons:
